Fixed overflowing text bug

--- a/src/components/ExperienceSection.scss
+++ b/src/components/ExperienceSection.scss
@@ -58,7 +58,7 @@
   &__item {
     background-color: var(--clr-bg-light);
     height: 7rem;
-    padding: 0.5rem 1.5rem 1.2rem 1.5rem;
+    padding: 0.5rem 1.5rem 0rem 1.5rem;
     border-bottom: 1px solid var(--clr-text-secondary);
     overflow-y: scroll;
 
